--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400&display=swap" rel="stylesheet">
+<link rel="icon" href="logo.png" type="image/png">
+
+<link rel="manifest" href="site.webmanifest" >
+
+
+
 
     </head>
     <body>
